--- a/index.html
+++ b/index.html
@@ -1,1 +1,85 @@
-jijij
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>第一学期作品</title>
+        <style>
+            table, th, td {
+              border: 1px solid black;
+            }
+            .neirong {
+                background-color:yellow;
+            }
+            #zuiqiang{
+                background-color:red;
+            }
+        </style>
+
+    <h1> 王鑫 </h1>
+
+    <h2> 介绍 </h2>
+                 第一章web概述。
+
+    <h2> 目录 </h2>
+    <ol>
+        <li> 林大 1-1web前端开发描述 </li>
+        <li> 林大 1-2,网页与网站 </li>
+        <li>林大1-3，web前端开发技术</li>
+    </ol>
+
+    <h2> 内容 </h2>
+
+    <h4> 林大 1-1,1-2,1-3， web概论 </h4>
+    <table style="width:100%">
+    <tr>
+        <th>名称</th>
+        <th>内容</th>
+    </tr>
+    <tr>
+        <td>学习内容</td>
+        <td> web的简单介绍、结构、前端和后端。</td>
+    </tr>
+    <tr>
+        <td>课程材料</td>
+        <td> <a>林大第一节课件 </a> </td>
+    </tr>
+    <tr>
+        <td>我的讲解</td>
+      <tb>应为觉得1-1和1~3没什么讲的所以只讲了1~2</tb>
+        <td>
+            <audio controls>
+                <!-- <source src="horse.ogg" type="audio/ogg"> -->
+                <source src="html概述.mp3" type="audio/mpeg">
+                Your browser does not support the audio element.
+            </audio>
+        </td>
+    </tr>
+    <tr>
+        <td>我的作品</td>
+<!--         <td> <a href="https://github.com/LIZILITA/-/tree/master/%E7%AC%94%E8%AE%B0"> 我的笔记 </a> </td> -->
+    </tr>
+    <tr>
+        <td>学习时间</td>
+        <td> 3~4小时 </a> </td>
+    </tr>
+    <tr>
+        <td>新单词</td>
+        <td> web（网络）css（页面美化）</a> </td>
+    </tr>
+    <tr>
+    </table>
+
+  
+    </table>
+    <h2> 课程材料 </h2>
+    <ol>
+        <li>  <a href="https://www.icourse163.org/learn/BJFU-1003382003?tid=1003609002#/learn/content"> 北京林业大学《Web前端开发》</a>  </li>
+    </ol>
+
+    <h2> 参考材料 </h2>
+    <ol>
+        <li>  <a>请自行寻找 </a>  </li>
+    </ol>
+
+    </body>
+</html>
