--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <td>
             <audio controls>
                 <!-- <source src="horse.ogg" type="audio/ogg"> -->
-                <source src="https://github.com/xinbaobao3775/yvyin/blob/master/REC20190416224249.mp3" type="audio/mpeg">
+                <source src="https://xinbaobao3775.github.io/yvyin/REC20190416224249.mp3" type="audio/mpeg">
                 Your browser does not support the audio element.
             </audio>
         </td>
