--- a/index.html
+++ b/index.html
@@ -91,10 +91,16 @@
                 <!-- <source src="horse.ogg" type="audio/ogg"> -->
                 <source src="https://xinbaobao3775.github.io/yvyin/REC20190417215744.mp3" type="audio/mpeg">
                 Your browser does not support the audio element.
-                
+                </audio>
+        </td> 
+        <td>       
+            <audio controls>    
                 <source src="https://xinbaobao3775.github.io/yvyin/REC20190417220327.mp3" type="audio/mpeg">
                 Your browser does not support the audio element.
-                
+                </audio>
+        </td> 
+        <td>       
+            <audio controls>    
                 <source src="https://xinbaobao3775.github.io/yvyin/REC20190417221033.mp3" type="audio/mpeg">
                 Your browser does not support the audio element.
             </audio>
